--- a/travis.yml
+++ b/travis.yml
@@ -1,9 +1,5 @@
 language: csharp
 solution: DiscordBot/DiscordBot.sln
 install:
-  sudo apt-get install -y gtk-sharp2
-  nuget restore DiscordBot/DiscordBot.sln
-  mono:
-  latest
-  3.12.0
-  3.10.0
+  -sudo apt-get install -y gtk-sharp2
+  -nuget restore DiscordBot/DiscordBot.sln
